fix for CV display when on mobile

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -210,7 +210,17 @@ p {
     }
 }
 
+@media screen and (min-width: 1024px) {
+    .mobile {
+	display: none;
+    }
+}
+
 @media screen and (max-width: 1024px) {
+    .desktop {
+	display: none;
+    }
+
     #menu-wrapper.unfolded {
 	flex-direction: column-reverse;
 	justify-content: flex-start;
